--- a/index.html
+++ b/index.html
@@ -26,8 +26,83 @@
 
 <body>
     <!-- your content here... -->
-    <div class="test">
-        test 
+    <div class="toolbar">
+        <div class="items-wrapper">      
+            <div class="logo tb-item">
+                <img src="image.png" width="175px" height="75px"/>
+            </div>
+            <div class="main-links tb-item">
+                <div class="link">
+                    <span class="icon">
+                        <img src="icon-green.png" width="25px" height="25px"/>
+                    </span>
+                    <span class="text">Lorem</span>
+                </div>
+                <div class="link">
+                    <span class="icon">
+                        <img src="icon-purple.png" width="25px" height="25px"/>
+                    </span>
+                    <span class="text">Lorem</span>
+                </div>            
+                <div class="link">
+                    <span class="icon">
+                        <img src="icon-yellow.png" width="25px" height="25px"/>
+                    </span>
+                    <span class="text">Lorem</span>
+                </div>            
+                <div class="link">
+                    <span class="icon">
+                        <img src="icon-orange.png" width="25px" height="25px"/>
+                    </span>
+                    <span class="text">Lorem</span>
+                </div>            
+                <div class="link">
+                    <span class="icon">
+                        <img src="icon-blue.png" width="25px" height="25px"/>
+                    </span>
+                    <span class="text">Lorem</span>
+                </div>
+            </div>
+            <div class="settings tb-item">
+                <div class="link">
+                    <span class="text">About</span>
+                </div>
+                <div class="link">
+                    <span class="text">Contact</span>
+                </div>
+                <div class="link subscribe">
+                    <span class="text">Subscribe</span>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="main-content">
+        <div class="center-content">
+            <div class="error404">404</div>
+            <h4 class="error-subject">Oops! Page not found</h4>
+            <p class="error-text">Loer ipsum dummy text Loer ipsum dummy text Loer ipsum dummy tex Loer ipsum dummy tex Loer ipsum dummy texttt</p>
+        </div>
+        <div class="cards">
+            <div class="see-more">If you like the <span class="brand">Brand</span>, you will also like:</div>
+            <div class="card">
+                <p>
+                    <span>icon</span>
+                    Lorem: ipsum
+                </p>
+                <div>
+                    <img class="item-image" src="image.png" height="100px">
+                </div>
+                <p> NO LOREM IPSUM</p>
+                <p>TEST IO BRAND</p>
+                <p>Lorem Ipsum <span>Is Simply</span></p>
+                <p>Dummy Text</p>
+                <p>CLICK HERE</p>
+            </div>
+            <div class="see-all">
+                
+            </div>
+        </div>
     </div>
     <script src="js/scripts.js"></script>
 </body>
