--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>A Basic HTML5 Template</title>
+    <title>DevTest</title>
     <meta name="description" content="A simple HTML5 Template for new projects.">
     <meta name="author" content="SitePoint">
 
@@ -25,82 +25,198 @@
 </head>
 
 <body>
-    <!-- your content here... -->
-    <div class="toolbar">
-        <div class="items-wrapper">      
-            <div class="logo tb-item">
-                <img src="image.png" width="175px" height="75px"/>
-            </div>
-            <div class="main-links tb-item">
-                <div class="link">
-                    <span class="icon">
-                        <img src="icon-green.png" width="25px" height="25px"/>
-                    </span>
-                    <span class="text">Lorem</span>
+    <div class="main">
+        <div class="toolbar">
+            <div class="items-wrapper">      
+                <div class="logo tb-item">
+                    <img src="image.png" width="175px" height="75px"/>
                 </div>
-                <div class="link">
-                    <span class="icon">
-                        <img src="icon-purple.png" width="25px" height="25px"/>
-                    </span>
-                    <span class="text">Lorem</span>
-                </div>            
-                <div class="link">
-                    <span class="icon">
-                        <img src="icon-yellow.png" width="25px" height="25px"/>
-                    </span>
-                    <span class="text">Lorem</span>
-                </div>            
-                <div class="link">
-                    <span class="icon">
-                        <img src="icon-orange.png" width="25px" height="25px"/>
-                    </span>
-                    <span class="text">Lorem</span>
-                </div>            
-                <div class="link">
-                    <span class="icon">
-                        <img src="icon-blue.png" width="25px" height="25px"/>
-                    </span>
-                    <span class="text">Lorem</span>
+                <div class="main-links tb-item">
+                    <div class="link">
+                        <span class="icon">
+                            <img src="icon-green.png" width="25px" height="25px"/>
+                        </span>
+                        <span class="text">Lorem</span>
+                    </div>
+                    <div class="link">
+                        <span class="icon">
+                            <img src="icon-purple.png" width="25px" height="25px"/>
+                        </span>
+                        <span class="text">Lorem</span>
+                    </div>            
+                    <div class="link">
+                        <span class="icon">
+                            <img src="icon-yellow.png" width="25px" height="25px"/>
+                        </span>
+                        <span class="text">Lorem</span>
+                    </div>            
+                    <div class="link">
+                        <span class="icon">
+                            <img src="icon-orange.png" width="25px" height="25px"/>
+                        </span>
+                        <span class="text">Lorem</span>
+                    </div>            
+                    <div class="link">
+                        <span class="icon">
+                            <img src="icon-blue.png" width="25px" height="25px"/>
+                        </span>
+                        <span class="text">Lorem</span>
+                    </div>
                 </div>
-            </div>
-            <div class="settings tb-item">
-                <div class="link">
-                    <span class="text">About</span>
-                </div>
-                <div class="link">
-                    <span class="text">Contact</span>
-                </div>
-                <div class="link subscribe">
-                    <span class="text">Subscribe</span>
+                <div class="settings tb-item">
+                    <div class="link">
+                        <span class="text">About</span>
+                    </div>
+                    <div class="link">
+                        <span class="text">Contact</span>
+                    </div>
+                    <div class="link subscribe">
+                        <span class="text">Subscribe</span>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <div class="main-content">
-        <div class="center-content">
-            <div class="error404">404</div>
-            <h4 class="error-subject">Oops! Page not found</h4>
-            <p class="error-text">Loer ipsum dummy text Loer ipsum dummy text Loer ipsum dummy tex Loer ipsum dummy tex Loer ipsum dummy texttt</p>
-        </div>
-        <div class="cards">
-            <div class="see-more">If you like the <span class="brand">Brand</span>, you will also like:</div>
-            <div class="card">
-                <p>
-                    <span>icon</span>
-                    Lorem: ipsum
-                </p>
-                <div>
-                    <img class="item-image" src="image.png" height="100px">
-                </div>
-                <p> NO LOREM IPSUM</p>
-                <p>TEST IO BRAND</p>
-                <p>Lorem Ipsum <span>Is Simply</span></p>
-                <p>Dummy Text</p>
-                <p>CLICK HERE</p>
+        <div class="main-content">
+            <div class="center-content">
+                <div class="error404">404</div>
+                <h4 class="error-subject">Oops! Page not found</h4>
+                <p class="error-text">Loer ipsum dummy text Loer ipsum dummy text Loer ipsum dummy tex Loer ipsum dummy tex Loer ipsum dummy texttt</p>
             </div>
-            <div class="see-all">
-                
+            <div class="cards">
+                <div class="see-more">If you like the <span class="brand">Brand</span>, you will also like:</div>
+                <div class="card-wrapper">
+                    <div class="card">
+                        <div class="line1">
+                            <img class="card-icon" src="card-icon.png" height="20px">
+                            <div class="line1stext">
+                                Lorem: <strong>Ipsum</strong>
+                            </div>
+                        </div>
+                        <div class="line2" style="background-color: #20385E;">
+                            <div class="line2sub">
+                                <img class="item-image" src="image.png" height="80px">
+                            </div>
+                        </div>
+                        <div class="line3">
+                            <div class="line3sub">NO LOREM IPSUM</div> 
+                        </div>
+                        <div class="line4">TEST IO BRAND</div>
+                        <div class="line5">Lorem Ipsum <span class="line5sub">Is Simply</span></div>
+                        <div class="line6">Dummy Text</div>
+                        <div class="line7">CLICK HERE</div>
+                    </div>
+
+                    <div class="card">
+                        <div class="line1">
+                            <img class="card-icon" src="card-icon.png" height="20px">
+                            <div class="line1stext">
+                                Lorem: <strong>Ipsum</strong>
+                            </div>
+                        </div>
+                        <div class="line2" style="background-color: #CA5252;">
+                            <div class="line2sub">
+                                <img class="item-image" src="image.png" height="80px">
+                            </div>
+                        </div>
+                        <div class="line3">
+                            <div class="line3sub">NO LOREM IPSUM</div> 
+                        </div>
+                        <div class="line4">TEST IO BRAND</div>
+                        <div class="line5">Lorem Ipsum <span class="line5sub">Is Simply</span></div>
+                        <div class="line6">Dummy Text</div>
+                        <div class="line7">CLICK HERE</div>
+                    </div>
+
+                    <div class="card">
+                        <div class="line1">
+                            <img class="card-icon" src="card-icon.png" height="20px">
+                            <div class="line1stext">
+                                Lorem: <strong>Ipsum</strong>
+                            </div>
+                        </div>
+                        <div class="line2" style="background-color: #205E3D;">
+                            <div class="line2sub">
+                                <img class="item-image" src="image.png" height="80px">
+                            </div>
+                        </div>
+                        <div class="line3">
+                            <div class="line3sub">NO LOREM IPSUM</div> 
+                        </div>
+                        <div class="line4">TEST IO BRAND</div>
+                        <div class="line5">Lorem Ipsum <span class="line5sub">Is Simply</span></div>
+                        <div class="line6">Dummy Text</div>
+                        <div class="line7">CLICK HERE</div>
+                    </div>
+
+                    <div class="card">
+                        <div class="line1">
+                            <img class="card-icon" src="card-icon.png" height="20px">
+                            <div class="line1stext">
+                                Lorem: <strong>Ipsum</strong>
+                            </div>
+                        </div>
+                        <div class="line2" style="background-color: #BEBEBE;">
+                            <div class="line2sub">
+                                <img class="item-image" src="image.png" height="80px">
+                            </div>
+                        </div>
+                        <div class="line3">
+                            <div class="line3sub">NO LOREM IPSUM</div> 
+                        </div>
+                        <div class="line4">TEST IO BRAND</div>
+                        <div class="line5">Lorem Ipsum <span class="line5sub">Is Simply</span></div>
+                        <div class="line6">Dummy Text</div>
+                        <div class="line7">CLICK HERE</div>
+                    </div>
+
+                    <div class="card">
+                        <div class="line1">
+                            <img class="card-icon" src="card-icon.png" height="20px">
+                            <div class="line1stext">
+                                Lorem: <strong>Ipsum</strong>
+                            </div>
+                        </div>
+                        <div class="line2" style="background-color: #82245C;">
+                            <div class="line2sub">
+                                <img class="item-image" src="image.png" height="80px">
+                            </div>
+                        </div>
+                        <div class="line3">
+                            <div class="line3sub">NO LOREM IPSUM</div> 
+                        </div>
+                        <div class="line4">TEST IO BRAND</div>
+                        <div class="line5">Lorem Ipsum <span class="line5sub">Is Simply</span></div>
+                        <div class="line6">Dummy Text</div>
+                        <div class="line7">CLICK HERE</div>
+                    </div>
+
+                    <div class="card">
+                        <div class="line1">
+                            <img class="card-icon" src="card-icon.png" height="20px">
+                            <div class="line1stext">
+                                Lorem: <strong>Ipsum</strong>
+                            </div>
+                        </div>
+                        <div class="line2" style="background-color: #20385E;">
+                            <div class="line2sub">
+                                <img class="item-image" src="image.png" height="80px">
+                            </div>
+                        </div>
+                        <div class="line3">
+                            <div class="line3sub">NO LOREM IPSUM</div> 
+                        </div>
+                        <div class="line4">TEST IO BRAND</div>
+                        <div class="line5">Lorem Ipsum <span class="line5sub">Is Simply</span></div>
+                        <div class="line6">Dummy Text</div>
+                        <div class="line7">CLICK HERE</div>
+                    </div>
+
+                    
+                </div>
+                <div class="see-all">
+
+                </div>
             </div>
         </div>
     </div>
